--- a/src/Contact.css
+++ b/src/Contact.css
@@ -7,7 +7,7 @@
     padding-top: 14vh;
     height: auto;
     min-height: 95vh;
-    background-color: rgb(4 4 4);
+    background-color: #fbfbfc;
     padding-bottom: 20px;
 }
 
@@ -38,7 +38,7 @@
     
     width: 70vw;
     max-width: 800px;
-    color: #FBEAEB;
+    color: #030303;
 }
 
 nav .SocialMediaButton {
