--- a/src/Header.css
+++ b/src/Header.css
@@ -5,11 +5,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    /* background-color: #edf9fe; */
+    background-color: rgb(60, 60, 153);
     position: fixed;
     width: 100%;
     z-index: 10;
-    background-image: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0, rgba(22, 22, 22, 0.5) 75%, #211f1fd4 100%), url(http://localhost:3000/myportfolio/static/media/header_background.789f7e6….jpg);
+    /* background-image: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0, rgba(22, 22, 22, 0.5) 75%, #211f1fd4 100%), url(http://localhost:3000/myportfolio/static/media/header_background.789f7e6….jpg); */
 
 }
 
@@ -25,7 +25,7 @@
 
 .logo span {
     margin: 0 5px;
-    color: #2F3C7E;
+    color: #FBEAEB;
     font-family: cursive;
     cursor: pointer;
 }
@@ -60,21 +60,19 @@
     color: #000;
 }
 
-/* Hide the menu button by default */
 .menu-button {
     display: none;
 }
 
-/* Transparent container */
 .transparent-container {
     position: fixed;
     top: 60px;
-    /* Adjust according to your header height */
+   
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    /* Semi-transparent background */
+    
     z-index: 9;
 }
 
@@ -115,7 +113,7 @@
     }
 
     .menu-button i {
-        color: #333;
+        color: #FBEAEB;
     }
 
     .menu-button:hover i {
